Added a button to call api

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <p id="weather" style="font-size:24px" class="loader"></p>
+  <button id="scan">Get Weather</button>
 </html>
+
+<script src="weather_api.js"></script>
 
 <style>
 .loader {
@@ -24,7 +27,3 @@
   100% { transform: rotate(360deg); }
 }
 </style>
-
-</html>
-
-<script src="weather_api.js"></script>
