--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <p id="weather" style="font-size:24px" class="loader"></p>
+  <p id="weather" style="font-size:24px"></p>
   <button id="scan">Get Weather</button>
 </html>
 
@@ -14,6 +14,16 @@
   height: 60px;
   -webkit-animation: spin 0.3s linear infinite; /* Safari */
   animation: spin 0.3s linear infinite;
+}
+
+.slow_loader {
+  border: 8px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 8px solid #3f3f3f;
+  width: 60px;
+  height: 60px;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
 }
 
 /* Safari */
