Added location search box feature, however the code is bad and it doesn't error check yet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <p id="weather" style="font-size:24px"></p>
   <button id="scan">Get Weather</button>
+  <input type="text" id="location_box" name="location_box">
 </html>
 
 <script src="weather_api.js"></script>
